# dPaste

./: .env.template  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
public/: manifest.json
src/: react-app-env.d.ts
src/app/: layout.tsx  page.tsx
src/app/view/: page.tsx
src/components/: Disclaimer.module.scss  Disclaimer.tsx  ErrorMessage.module.css  ErrorMessage.tsx  util.ts
src/components/add/: Form.module.scss  Form.tsx  Transactions.module.scss  Transactions.tsx  Wallet.module.scss  Wallet.tsx
src/components/ui/: switch.tsx
src/components/view/: Content.tsx
src/lib/: annotation.ts  config.ts  crypto.ts  golem-base.ts  language.ts  metamask.ts  note.ts  store.ts  transactions.ts  util.ts  utils.ts  wallet-api.ts
src/styles/: Layout.module.scss  View.module.scss  global.scss  variables.scss
tools/dpaste-cli/: Cargo.toml
tools/dpaste-cli/src/: main.rs  note_abi.rs
tools/golem-paste-cli/: Cargo.toml  shell.nix
tools/golem-paste-cli/src/: main.rs
