[package]
name = "dpaste-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
alloy = { version = "0.15.6", features = ["rlp"] }
alloy-rlp = { version = "0.3.11", features = ["derive"] }
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
const_format = "0.2.34"
data-encoding = "2.9.0"
k256 = { version = "0.13.4", features = ["ecdsa", "ecdsa-core"] }
pbkdf2 = "0.12.2"
rand = "0.9.1"
rand_chacha = "0.9.0"
reqwest = "0.12.15"
rlp = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
xdg = "2.5.2"
